<resources>
    <string name="app_name">REX Crypto Education</string>
    <string name="login">Login</string>
    <string name="cadastrar">Cadastrar-se</string>
    <string name="cadastrar2">Cadastrar</string>
    <string name="voltar">Voltar</string>
    <string name="proximo">Próximo</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="confirme_senha">Confirme a senha</string>
    <string name="nome_usuário">Nome do usuário</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="log_out">Deslogar</string>

    <string name="menu_course">Parte do Curso</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_contact">Contato</string>
    <string name="menu_certificate">Certificado</string>
    <string name="menu_about">Sobre</string>
    <string name="menu_audio_configuration">Configuração de áudio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_content">ContentActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="seu_perfil">Seu perfil</string>
    <string name="salvar">Salvar</string>
    <string name="avançar">Avançar</string>
    <string name="responda">Responda</string>
    <string name="sua_resposta">Digite sua resposta aqui</string>
    <string name="finalizar">Finalizar</string>
    <string name="questao01">Questão 01</string>
    <string name="questao02">Questão 02</string>
    <string name="questao03">Questão 03</string>
    <string name="voltar_menu">Voltar ao Menu</string>
    <string name="email_usuário">email.usuario@gmail.com</string>
    <string name="senha_usuário">12345</string>
    <string name="mostrar_senha">Mostrar senha</string>
    <string name="qual_certificado">Qual certificado você deseja?</string>
    <string name="certificado_digital">Digital</string>
    <string name="certificado_impresso">Impresso</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_certificate">CertificateActivity</string>
    <string name="title_activity_digital_certificate">DigitalCertificateActivity</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="email_envio">Email para envio</string>
    <string name="telefone">Telefone</string>
    <string name="parabéns">Parabéns!</string>
</resources>